src/objects/Pricing_Options__c.object
<CustomObject>
    <description>Custom Object to hold Service Id &amp; Service Price Id</description>
    <fields>
        <fullName>Display_Expiry_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display Expiry Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dynamic_Price__c</fullName>
        <description>Price is calculated in Pence based on Product Type, Subscription Type and respective TCode prices.</description>
        <formula>IF(	ISPICKVAL(Product_Type__c, &quot;premium&quot;),
	IF(ISPICKVAL(Subscription_Type__c, &quot;52continuous&quot;),
		TCode_Product__r.Weekly_Price__c * 52 - 
		IF(ISPICKVAL(TCodeManagement__r.Type__c, &quot;Low Start&quot;),
		 VALUE(TEXT(TCodeManagement__r.Low_Start_Period__c)) * (TCode_Product__r.Weekly_Price__c - TCode_Product__r.Low_Start_Price__c),
		 0
		),
		IF(ISPICKVAL(Subscription_Type__c, &quot;26continuous&quot;),
			TCode_Product__r.Weekly_Price__c * 26 - 
			IF(ISPICKVAL(TCodeManagement__r.Type__c, &quot;Low Start&quot;),
		 		VALUE(TEXT(TCodeManagement__r.Low_Start_Period__c)) * (TCode_Product__r.Weekly_Price__c - TCode_Product__r.Low_Start_Price__c),
				 0
			),
			IF(ISPICKVAL(Subscription_Type__c, &quot;52weeks&quot;),
				TCode_Product__r.Weekly_Price__c * 52, 
				IF(ISPICKVAL(Subscription_Type__c, &quot;26weeks&quot;),
					TCode_Product__r.Weekly_Price__c * 26,
					IF(ISPICKVAL(Subscription_Type__c, &quot;13continuous&quot;),
						TCode_Product__r.Weekly_Price__c * 13,
						IF(ISPICKVAL(Subscription_Type__c, &quot;13weeks&quot;),
							TCode_Product__r.X13_Week_Price__c,
							0
						)
					)
				)
			)
		)
	),
	IF(ISPICKVAL( Product_Type__c, &quot;Webpack&quot;),
		IF(ISPICKVAL( Subscription_Type__c, &quot;yearly&quot;),
			TCode_Product__r.Web_Yearly_Price__c, 
			IF(ISPICKVAL(Subscription_Type__c,&quot;monthly&quot;),
				TCode_Product__r.Web_Monthly_Price__c,
				0
			)
		),				
		IF(ISPICKVAL(Product_Type__c, &quot;digital&quot;),
			IF(ISPICKVAL(Subscription_Type__c, &quot;yearly&quot;), 
				TCode_Product__r.Digital_Yearly_Price__c , 
				IF(ISPICKVAL(Subscription_Type__c,&quot;monthly&quot;), 
					TCode_Product__r.Digital_Monthly_Price__c ,
					0
				)
			),
			0
		)
	)
) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Price is calculated in Pence based on Product Type, Subscription Type and respective TCode prices.</inlineHelpText>
        <label>Dynamic Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flow_Type__c</fullName>
        <label>Flow Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>pocflow</fullName>
                </value>
                <value>
                <fullName>promotionflow</fullName>
                </value>
                <value>
                <fullName>openofferflow</fullName>
                </value>
                <value>
                <fullName>sfdcflow</fullName>
                </value>
                <value>
                <fullName>bulkflow</fullName>
                </value>
                <value>
                <fullName>bulkfixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FulfillmentPlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FulfillmentPlanId</label>
        <referenceTo>FulfillmentPlan__c</referenceTo>
        <relationshipLabel>Pricing Options</relationshipLabel>
        <relationshipName>Pricing_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GracePeriodDuration1__c</fullName>
        <label>Grace Period Duration 1</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grace_Period_Duration_2__c</fullName>
        <label>Grace Period Duration 2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_User_Discount_Voucher__c</fullName>
        <label>Multi User Discount Voucher</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <label>Package Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Unique_ID__c</fullName>
        <label>Partner Unique ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Poll_for_Partner_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Poll for Partner Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>premium</fullName>
                </value>
                <value>
                <fullName>digital</fullName>
                </value>
                <value>
                <fullName>webpack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceId__c</fullName>
        <label>ServiceId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServicePriceId__c</fullName>
        <label>ServicePriceId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show_Cancel_Button__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Cancel Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscriber_Check_Interval__c</fullName>
        <label>Subscriber Check Interval</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                <fullName>52continuous</fullName>
                </value>
                <value>
                <fullName>26continuous</fullName>
                </value>
                <value>
                <fullName>13continuous</fullName>
                </value>
                <value>
                <fullName>52weeks</fullName>
                </value>
                <value>
                <fullName>26weeks</fullName>
                </value>
                <value>
                <fullName>13weeks</fullName>
                </value>
                <value>
                <fullName>monthly</fullName>
                </value>
                <value>
                <fullName>yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TCodeManagement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TCode</label>
        <referenceTo>TCodeManagement__c</referenceTo>
        <relationshipLabel>Pricing Options</relationshipLabel>
        <relationshipName>Pricing_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TCode_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TCode Product</label>
        <referenceTo>TCode_Product__c</referenceTo>
        <relationshipLabel>Pricing Options</relationshipLabel>
        <relationshipName>Pricing_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>imageURL__c</fullName>
        <label>imageURL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tandcURL__c</fullName>
        <label>tandcURL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Pricing Options</label>
    <nameField>
        <displayFormat>PO-{0000}</displayFormat>
        <label>Pricing Options Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>